deploy: 37378a0ba341e25a53dc3394cffac83dfa671901

--- a/_sources/render/format_code_cells.ipynb
+++ b/_sources/render/format_code_cells.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "687ccbbb",
+   "id": "fa57dc92",
    "metadata": {},
    "source": [
     "(render/code-cells)=\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4a72ca65",
+   "id": "be522514",
    "metadata": {
     "mystnb": {
      "number_source_lines": true
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a65c67",
+   "id": "55f8bab4",
    "metadata": {},
    "source": [
     "(render/output/stdout-stderr)=\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8d2b430",
+   "id": "14ef9dbc",
    "metadata": {
     "tags": [
      "remove-input",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba8a6b9",
+   "id": "6b7e6c35",
    "metadata": {},
    "source": [
     "Alternatively, you can configure how stdout is dealt with at a global configuration level, using the `nb_output_stderr` configuration value.\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3560d8ba",
+   "id": "02be56f8",
    "metadata": {
     "tags": [
      "hide-output"
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11fb41fa",
+   "id": "9d875c10",
    "metadata": {},
    "source": [
     "Items in this dictionary can be overridden by the `nb_mime_priority_overrides` configuration option, in your `conf.py`.\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c434e08",
+   "id": "523a8273",
    "metadata": {
     "mystnb": {
      "figure": {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ae4393",
+   "id": "826f04bb",
    "metadata": {},
    "source": [
     "Now we can link to the image from anywhere in our documentation: [swim to the fish](fun-fish-ref)\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3911ebdc",
+   "id": "bcb05678",
    "metadata": {
     "mystnb": {
      "figure": {
@@ -580,31 +580,31 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_a023f\" class=\"dataframe align-center\">\n",
+       "<table id=\"T_f729d\" class=\"dataframe align-center\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_a023f_level0_col0\" class=\"col_heading level0 col0\" >column 1</th>\n",
+       "      <th id=\"T_f729d_level0_col0\" class=\"col_heading level0 col0\" >column 1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_a023f_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_a023f_row0_col0\" class=\"data row0 col0\" >1</td>\n",
+       "      <th id=\"T_f729d_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_f729d_row0_col0\" class=\"data row0 col0\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a023f_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_a023f_row1_col0\" class=\"data row1 col0\" >2</td>\n",
+       "      <th id=\"T_f729d_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_f729d_row1_col0\" class=\"data row1 col0\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a023f_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_a023f_row2_col0\" class=\"data row2 col0\" >3</td>\n",
+       "      <th id=\"T_f729d_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_f729d_row2_col0\" class=\"data row2 col0\" >3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f722496b550>"
+       "<pandas.io.formats.style.Styler at 0x7f9120de3400>"
       ]
      },
      "execution_count": 5,
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0315696",
+   "id": "6ba6c5f9",
    "metadata": {},
    "source": [
     "(render/output/markdown)=\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0735e812",
+   "id": "fb6631ac",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a2aaf3b",
+   "id": "05c76c5a",
    "metadata": {},
    "source": [
     "and even internal images can be rendered!"
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e27b9ff8",
+   "id": "540c3116",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59d1f59d",
+   "id": "1fffccb5",
    "metadata": {},
    "source": [
     "But setting the Markdown format to `myst` will allow for more advanced formatting,\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "86d49723",
+   "id": "f2a3bb2d",
    "metadata": {
     "mystnb": {
      "markdown_format": "myst"
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5fb546f",
+   "id": "6b83dea5",
    "metadata": {},
    "source": [
     "(render/output/ansi)=\n",
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e817982c",
+   "id": "75d6f15c",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b5b978",
+   "id": "486e3885",
    "metadata": {},
    "source": [
     "This uses the built-in {py:class}`~myst_nb.core.lexers.AnsiColorLexer` [pygments lexer](https://pygments.org/).\n",
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7f1f0b9b",
+   "id": "6ac84a35",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09998eb4",
+   "id": "da9d3e1a",
    "metadata": {},
    "source": [
     ":::{note}\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6d94c052",
+   "id": "47d917aa",
    "metadata": {},
    "outputs": [
     {
